disconnect when AWLivePushU release, memory leaks

--- a/AWLiveKitDemo/Base.lproj/Main.storyboard
+++ b/AWLiveKitDemo/Base.lproj/Main.storyboard
@@ -144,11 +144,11 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="推流地址" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="e7b-G5-ahU">
-                                <rect key="frame" x="16" y="212" width="343" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="rtmp://m.push.wifiwx.com:1935/live?adow=adow/wifiwx-84" placeholder="推流地址" textAlignment="natural" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="e7b-G5-ahU">
+                                <rect key="frame" x="16" y="212" width="343" height="40"/>
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="RDA-U0-nRA"/>
+                                    <constraint firstAttribute="height" constant="40" id="RDA-U0-nRA"/>
                                 </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
