--- a/AWLiveKitDemo/Base.lproj/Main.storyboard
+++ b/AWLiveKitDemo/Base.lproj/Main.storyboard
@@ -181,6 +181,12 @@
                                     <action selector="onButtonStartGPUImageWithSender:" destination="S0V-ZS-9eU" eventType="touchUpInside" id="Ge1-72-nOY"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nAH-PG-rTg">
+                                <rect key="frame" x="369" y="20" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.76470588240000004" green="0.76470588240000004" blue="0.76078431369999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -190,6 +196,8 @@
                             <constraint firstItem="d0V-xO-5n1" firstAttribute="centerX" secondItem="6Ar-tw-3LW" secondAttribute="centerX" id="GHP-6H-0XX"/>
                             <constraint firstItem="e7b-G5-ahU" firstAttribute="trailing" secondItem="6Ar-tw-3LW" secondAttribute="trailingMargin" id="KVq-I6-cnT"/>
                             <constraint firstItem="e7b-G5-ahU" firstAttribute="top" secondItem="d0V-xO-5n1" secondAttribute="bottom" constant="17" id="Qzm-WT-5yO"/>
+                            <constraint firstAttribute="trailing" secondItem="nAH-PG-rTg" secondAttribute="trailing" constant="6" id="Thc-Xk-pOL"/>
+                            <constraint firstItem="nAH-PG-rTg" firstAttribute="top" secondItem="OlI-5O-0cp" secondAttribute="bottom" id="Tt7-jk-R5h"/>
                             <constraint firstItem="jPk-DX-J70" firstAttribute="top" secondItem="QtM-Ni-S8V" secondAttribute="bottom" id="bNG-Sb-yg0"/>
                             <constraint firstItem="d0V-xO-5n1" firstAttribute="top" secondItem="OlI-5O-0cp" secondAttribute="bottom" constant="154" id="crF-eI-Qii"/>
                             <constraint firstItem="zXd-Du-73x" firstAttribute="top" secondItem="jPk-DX-J70" secondAttribute="bottom" constant="8" id="jSj-RJ-5aP"/>
@@ -202,6 +210,7 @@
                     <connections>
                         <outlet property="qualityPicker" destination="QtM-Ni-S8V" id="YFR-lj-w9h"/>
                         <outlet property="urlTextField" destination="e7b-G5-ahU" id="ic5-2Q-Ja9"/>
+                        <outlet property="versionLabel" destination="nAH-PG-rTg" id="J3V-Gc-bqa"/>
                         <segue destination="BYZ-38-t0r" kind="presentation" identifier="segue_start_to_live" id="E8a-pJ-9Ot"/>
                         <segue destination="BYZ-38-t0r" kind="presentation" identifier="segue_start_to_gpuimagelive" id="SHG-H9-urc"/>
                     </connections>
